# devguard

./: .gitignore  .gitleaks.toml  .gitmessage  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .spectral.yaml  01-架构设计规范.md  02-代码编写规范.md  03-Git协作规范.md  04-API设计规范.md  05-测试规范.md  06-文档规范.md  AI协作开发流程.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  SUPPORT.md  commitlint.config.js  dashboard.html  importlinter.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  start_server.py  打开仪表盘.bat
.agenthub/: config.json
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md
conventions/: 01-architecture_架构设计规范.md  02-coding_代码编写规范.md  03-git_Git协作规范.md  04-api_API设计规范.md  05-testing_测试规范.md  06-documentation_文档规范.md  08-code-understanding_代码理解与图谱规范.md  CLAUDE-规范导航.md  README-规范导航.md  README.md  _meta.yaml
docs/: 重构笔记-使用开发规范重构项目指南.md
meta/: FILE_GRAPH.md  豁免清单.md
plan/: 开发清单.md
scripts/: audit_file_placement.py  backfill_updated_tag.py  check_ai_workflow.py  check_claude.py  check_code_understanding.py  check_compliance.py  check_consistency.py  check_convergence_artifacts.py  check_convergence_gate.py  check_decision_alignment.py  check_doc_quality.py  check_doc_sync.py  check_ecc_alignment.py  check_enforcement.py  check_exemption_log.py  check_file_placement.py  check_html_artifact.py  check_plan.py  check_report.py  check_status.py  check_status_updated.py  check_template_drift.py  check_updated_tag.py  check_worklog_ref.py  check_worklog_structure.py  render_meta.py  (+9 more)
(+398 files in other folders)
